--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -4,8 +4,9 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+  "dev": "vite",
+  "build": "node ./node_modules/vite/bin/vite.js build",
+  "build:ci": "node ./node_modules/vite/bin/vite.js build",
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
