--- a/portfolio-site/vercel.json
+++ b/portfolio-site/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build:ci",
   "outputDirectory": "dist",
   "devCommand": "npm run dev",
-  "installCommand": "npm install"
+  "installCommand": "npm ci"
 }
