feat: add Vercel Analytics integration with production-only rendering

--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -4,9 +4,9 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "node ./node_modules/vite/bin/vite.js build",
-  "build:ci": "node ./node_modules/vite/bin/vite.js build",
+    "dev": "vite",
+    "build": "node ./node_modules/vite/bin/vite.js build",
+    "build:ci": "node ./node_modules/vite/bin/vite.js build",
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -15,6 +15,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@react-spring/web": "^10.0.3",
+    "@vercel/analytics": "^1.6.1",
     "framer-motion": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
