--- a/portfolio-site/package.json
+++ b/portfolio-site/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.1.1",
     "@react-spring/web": "^10.0.3",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "framer-motion": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
